--- a/_posts/2020-01-11-art-class.markdown
+++ b/_posts/2020-01-11-art-class.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Back to Art/School"
-categories: life, art
+categories: [life, art]
 ---
 
 Today's mood: *Blood* - Kelsey Lu
