Added g drive link

--- a/_posts/2023-01-02-2022-reading-list.markdown
+++ b/_posts/2023-01-02-2022-reading-list.markdown
@@ -12,6 +12,7 @@ Shifting from reading a little to reading a lot, and spending less time on my ph
 
 Without further ado, here are the 61 books I read in 2022. My favorites are noted "fav". This table may break the layout on my blog. If it does, apologies. I'm working on it :)
 
+If the table below is illegible, try [this version on google drive](https://docs.google.com/spreadsheets/d/1nAklTe0NmjYa_hfbM6MjcpifWdPGfuhFnIthQqbKRyw/edit?usp=sharing)
 
 |Number|Month    |Title                                |Series                   |Author                       |Favorites|
 |------|---------|-------------------------------------|-------------------------|-----------------------------|---------|
