--- a/_posts/2023-04-01-reading-list-2023-q1.markdown
+++ b/_posts/2023-04-01-reading-list-2023-q1.markdown
@@ -4,7 +4,9 @@ title:  "Reading List 2023 Q1"
 categories: [art]
 ---
 
-I had so much fun with my [reading goal]({% post_url 2023-01-02-2022-reading-list %}) last year, I'm running it back. Rather than wait until the end, I figured I'd do periodic updates along the way. I'm being as flexible as I feel inclined to be any given month about what counts as a book. Below are the books I read in the first three months of 2023.
+I had so much fun with my reading goal last year, I'm running it back. Rather than wait until the end, I figured I'd do periodic updates along the way. I'm being as flexible as I feel inclined to be any given month about what counts as a book. Below are the books I read in the first three months of 2023.
+
+(Link to last year's [reading goal]({% post_url 2023-01-02-2022-reading-list %}) post because my blog template gets weird if I put a link in the first paragraph and I haven't gotten around to fixing it).
 
 - *Stories of Your Life and Others* by Ted Chiang
 - *Legends and Lattes* by Travis Baldree
