--- a/_posts/2024-10-30-big-bad-con-2024.markdown
+++ b/_posts/2024-10-30-big-bad-con-2024.markdown
@@ -15,7 +15,7 @@ I'm swimming in a hazy mixture of post-con-blues and invigorating enthusiasm aft
 
 ## Panels and Workshops
 
-- Rise and Design with the Bakers: freeform Q&A with Megay Baker.
+- Rise and Design with the Bakers: freeform Q&A with Meguey Baker.
 - Roll to Kiss: romance in RPGs. I think my biggest takeaway was the comment to check in with yourself, in addition to checking in with your fellow players.
 - Shitpost TTRPG Design Workshop: a lovely encouragement to abandon caution and poop out a game, which I did!
 - The Play's the Thing: RPG designers and dramaturgs talk about RPG design and dramaturgy.
