--- a/_posts/2025-01-04-2024-a-year-of-play.markdown
+++ b/_posts/2025-01-04-2024-a-year-of-play.markdown
@@ -36,5 +36,20 @@ In *Rules of Play*, Salen and Zimmerman propose "Play is free movement within a 
 
 One of the projects I want to work on in 2025 is investing significant time into working on our house. House projects have been overwhelming, and I'm curious if I can change my relationship with working on the house by approaching it through this lens of play. I'm calling it "playing house." Hopefully I'll have some updates on this project throughout the year!
 
+## 10 Favorites of 2024
+
+Not necessarily things that came out in 2024, just things I loved in 2024!
+
+- My Favorite Thing Is Monsters Vol. 2 by Emil Ferris
+- Coyote Doggirl by Lisa Hanawalt
+- Adventure Hooks by Tyler Crumrine
+- Jeremiah Brent on Queer Eye Season 9
+- [Malpractice](https://www.instagram.com/malpractice.pdx/){:target="_blank"}
+- [TPK Brewing](https://www.tpkbrewing.com/){:target="_blank"}
+- The glass cups that cortados come in
+- Sauna and Spa at Everett House
+- The Mt. Tabor Red Loop
+- Dog watching
+
 Wishing you a playful 2025!
 
