--- a/_posts/2025-12-14-the-endies-2025.markdown
+++ b/_posts/2025-12-14-the-endies-2025.markdown
@@ -8,6 +8,8 @@ Forget the Ennies, it's time for the Endies! What RPGs did I play this year? Wha
 
 Go check out [Lady Tabletop's blog](https://ladytabletop.wordpress.com/2025/11/30/the-endie-awards/) for the origins of the Endies and maybe to find more links to other Endies blog posts.
 
+*Edit: apparently my blog's template doesn't play nice with how I wrote this post, so please forgive some of the formatting!*
+
 ## The Stats
 
 | Game                      | Sessions |
