--- a/_posts/2025-12-14-the-endies-2025.markdown
+++ b/_posts/2025-12-14-the-endies-2025.markdown
@@ -56,7 +56,7 @@ If you're at all on RPG social media, I'm sure you heard about this. If not, it 
 
 **Most resonant character:** [Triangle Agency](https://shop.hauntedtable.games/collections/games/products/triangle-agency-core-rulebook-preorder)
 
-Sorry. Couldn't resist. Liv Butkiss, Clown, Romantic, Gun. Forever in my heart. I hope your romance with the White Whale gives you the thrill of the hunt, of longing, of flirting, of being right on the edge of a big breakthrough that changes mathematics forever, forever.
+Sorry. Couldn't resist. Liv Butkiss, Clown, Romantic, Gun. Forever in my heart. I hope your romance with the White Whale anomaly gives you the thrill of the hunt, of longing, of flirting, of being right on the edge of a big breakthrough that changes mathematics forever, forever.
 
 Triangle Agency is real good. It sounds like a lot to GM and I want to say thank you so much to [Kona](https://bsky.app/profile/konahart.darlingbat.games) for GMing it! It was an RPG highlight of my year!
 
@@ -64,14 +64,14 @@ Triangle Agency is real good. It sounds like a lot to GM and I want to say thank
 
 Whether you're a hardcore PbtA-gead, just PbtA-curious, or don't even know what PbtA is, I think you would get something out of playing or reading Patchwork World. Aaron King turns Moves into Poetry. It is a delight in play, and it is a delight to just read the moves and imagine the characters and worlds and play they suggest.
 
-## Intensions
+## Intentions
 
 A few intentions for 2026:
 
 **Continue to explore solo RPGs!** Inspired by an episode of [Between Two Cairns](https://www.patreon.com/posts/dungeon-module-2-140574494) where Benjamin Marra and Sam Mameli talk about solo playing RPGs that aren't designed to be solo RPGs. I've now played a few sessions of [Cairn](https://cairnrpg.com/) solo, and it's been a fascinating experience. I started off using [Flint](https://www.drivethrurpg.com/en/product/522147/flint-a-cairn-2e-solo-handbook) as an oracle to support solo play, but have found myself relying on it less and less and simply using the core Cairn mechanics of Wilderness Travel procedures, reaction rolls, and the die of fate to inject some external input into my imagination.
 
-**Transform GM prep into something I enjoy as a form of play in and of itself.** I'm curious is solo RPGs will be a way to work on this. I've been working on reducing the amount of stress GM prep gives me, but I still have a complicated relationship with it, and it triggers a lot of baggage I carry regarding procrastination. I want GM prep to be something I *want* to do, not something that I am always wrestling with in the pile of things that I *should* do. The way playing Cairn solo has felt like it straddles the line between playing an RPG and prepping for a session of play feels fruitful. I'm also curious if I can use solo play as a form of writing to work on Kate and my next project in the FOLK series, The Sunset School for Girls.
+**Transform GM prep into something I enjoy as a form of play in and of itself.** I'm curious if solo RPGs will be a way to work on this. I've been working on reducing the amount of stress GM prep gives me, but I still have a complicated relationship with it, and it triggers a lot of baggage I carry regarding procrastination. I want GM prep to be something I *want* to do, not something that I am always wrestling with in the pile of things that I *should* do. The way playing Cairn solo has felt like it straddles the line between playing an RPG and prepping for a session of play feels fruitful. I'm also curious if I can use solo play as a form of writing to work on Kate and my next project in the FOLK series, The Sunset School for Girls.
 
-**Cultivate intrinsic motivation for my RPG projects.** Kate and I decided to pull out of doing Zine Month this upcoming February, and I'm excited and nervous about tackling The Sunset School for Girls without the external pressure of "the backers and depending on us." This is a move towards the intrinsically motivated way I want to approach my art, but it is very different than the model of school assignments and clients that my education and professional life have revolved around.
+**Cultivate intrinsic motivation for my RPG projects.** Kate and I decided to pull out of doing Zine Month this upcoming February, and I'm excited and nervous about tackling The Sunset School for Girls without the external pressure of "the backers are depending on us." This is a move towards the intrinsically motivated way I want to approach my art, but it is very different than the model of school assignments and clients that my education and professional life have revolved around.
 
 Thanks for reading! And if you have an end-of-year writeup, I'd love to read it! Shoot me an email at [brendan@brendanalbano.com](mailto:brendan@brendanalbano.com) with the link!
