Remove open link in new window kramdown that Hakyll doesn't support

--- a/posts/2023-04-01-reading-list-2023-q1.markdown
+++ b/posts/2023-04-01-reading-list-2023-q1.markdown
@@ -25,6 +25,6 @@ I had so much fun with my reading goal last year, I'm running it back. Rather th
 - *Banana* by Dan Koeppel
 - *The Hundred Thousand Kingdoms* by N. K. Jemisin
 
-I decided I wanted to read more comics this year, and kicking things off with *Starstruck* was a delight. It was a little hard to follow at times, but once I got my sea legs (space legs?), I was in love. The universe of *Starstruck* is equal parts whimsical and cynical in a truly joyous way. The comics are available online at [https://starstruckcomics.com/](https://starstruckcomics.com/){:target="_blank"}, but I thought reading it on paper was well worth it. 
+I decided I wanted to read more comics this year, and kicking things off with *Starstruck* was a delight. It was a little hard to follow at times, but once I got my sea legs (space legs?), I was in love. The universe of *Starstruck* is equal parts whimsical and cynical in a truly joyous way. The comics are available online at [https://starstruckcomics.com/](https://starstruckcomics.com/), but I thought reading it on paper was well worth it. 
 
-If you're into the particularly nerdy depths that is RPG actual plays, I got turned onto *Starstruck* by the [Dimension 20 Actual Play](https://www.dropout.tv/dimension-20/season:13){:target="_blank"}. Speaking of actual plays, I am adoring [Worlds Beyond Number](https://worldsbeyondnumber.com/){:target="_blank"}. The Children's Campaign available on the Worlds Beyond Number Patreon is well worth it.
+If you're into the particularly nerdy depths that is RPG actual plays, I got turned onto *Starstruck* by the [Dimension 20 Actual Play](https://www.dropout.tv/dimension-20/season:13). Speaking of actual plays, I am adoring [Worlds Beyond Number](https://worldsbeyondnumber.com/). The Children's Campaign available on the Worlds Beyond Number Patreon is well worth it.
