--- a/posts/2024-10-30-big-bad-con-2024.markdown
+++ b/posts/2024-10-30-big-bad-con-2024.markdown
@@ -24,11 +24,11 @@ I'm swimming in a hazy mixture of post-con-blues and invigorating enthusiasm aft
 
 Kate and my first time tabling. We had a ton of fun sharing, selling, and trading our games:
 
-- [FOLK](https://brendanalbano.itch.io/folk){:target="_blank"}
-- [Everything You Are Must Be Found](https://brendanalbano.itch.io/eyambf-playtest){:target="_blank"}
-- [Word Wizards](https://brendanalbano.itch.io/word-wizards){:target="_blank"}
-- [Advanced Lasers & Feelings](https://brendanalbano.itch.io/advanced-lasers-feelings){:target="_blank"}
-- [Can We Keep It?](https://brendanalbano.itch.io/can-we-keep-it){:target="_blank"} - Created at the Shitpost TTRPG Design Workshop and printed on the hotel printer!
+- [FOLK](https://brendanalbano.itch.io/folk)
+- [Everything You Are Must Be Found](https://brendanalbano.itch.io/eyambf-playtest)
+- [Word Wizards](https://brendanalbano.itch.io/word-wizards)
+- [Advanced Lasers & Feelings](https://brendanalbano.itch.io/advanced-lasers-feelings)
+- [Can We Keep It?](https://brendanalbano.itch.io/can-we-keep-it) - Created at the Shitpost TTRPG Design Workshop and printed on the hotel printer!
 
 ## Conversations and Community!
 
