--- a/posts/2025-01-04-2024-a-year-of-play.markdown
+++ b/posts/2025-01-04-2024-a-year-of-play.markdown
@@ -10,25 +10,25 @@ I'm going to briefly mention one work first, which is that construction has begu
 
 ## Word Wizards
 
-I was shocked to see that according to itch.io, I published [Word Wizards](https://brendanalbano.itch.io/word-wizards){:target="_blank"} on May 26, 2024. I thought surely I published this in 2023, making 2024 a garbage year where I accomplished nothing creatively. But in fact, 2024 was the year where I published my very first roleplaying game! I will be telling my therapist about this miraculous discovery.
+I was shocked to see that according to itch.io, I published [Word Wizards](https://brendanalbano.itch.io/word-wizards) on May 26, 2024. I thought surely I published this in 2023, making 2024 a garbage year where I accomplished nothing creatively. But in fact, 2024 was the year where I published my very first roleplaying game! I will be telling my therapist about this miraculous discovery.
 
 I want to give a big thank you to my friends Andy, Lex and Braden, since our informal "hey, what if we all met up once a week to encourage each other to work on our game design projects" was what made Word Wizards happen!
 
 Since we've got a therapy sub-theme going on in this post, 2024 was a big success regarding my goal of becoming a game designer. In fact, I have fully accomplished this goal, because I have designed a game. Believe you me gentle reader, I want to move these goalposts so bad, but I'm not going to. (At least not while you are watching me!)
 
-In 2025 I'm looking forward to another round of playtesting, revising and publishing finished versions of two projects I released as playtests/beta versions in 2024: [Everything You Are Must Be Found](https://brendanalbano.itch.io/eyambf-playtest){:target="_blank"} and [Every Knight's Story Begins](https://brendanalbano.itch.io/every-knights-story-begins){:target="_blank"}.
+In 2025 I'm looking forward to another round of playtesting, revising and publishing finished versions of two projects I released as playtests/beta versions in 2024: [Everything You Are Must Be Found](https://brendanalbano.itch.io/eyambf-playtest) and [Every Knight's Story Begins](https://brendanalbano.itch.io/every-knights-story-begins).
 
 ## My First Con
 
-Kate and I attended two RPG cons this year, something neither of us had done before! The first, making it my first con, was [Go Play NW](https://goplaynw.org/){:target="_blank"}.
+Kate and I attended two RPG cons this year, something neither of us had done before! The first, making it my first con, was [Go Play NW](https://goplaynw.org/).
 
-In addition to playing lots of games, Go Play's format of organizing games via [The Donut](https://goplaynw.org/the-donut/){:target="_blank"} made it a great, low-pressure environment to run some games as well! I had a lot of fun running Mausritter and Electric Bastionland.
+In addition to playing lots of games, Go Play's format of organizing games via [The Donut](https://goplaynw.org/the-donut/) made it a great, low-pressure environment to run some games as well! I had a lot of fun running Mausritter and Electric Bastionland.
 
 Go Play is a relatively small con, and it was a good way to ease myself into the con experience before attending Big Bad Con later in the year. Which I understand isn't even that big by con standards?! Regardless, the games were lovely, and even more lovely were the between-game and late-night conversations and camaraderie of a whole bunch of people coming together to celebrate something they are extremely passionate about. 
 
 ## My First Time Tabling
 
-Thanks to the [Big Bad Con](https://www.bigbadcon.com/){:target="_blank"} Small Press Showcase, Kate and I got a chance to table and sell our zines for the first time! Kate's project [FOLK](https://brendanalbano.itch.io/folk){:target="_blank"} was our flagship product (if you're in Portland, you can probably snag a print copy at Board Bard Games, Dark Future, or Secret Room), but I had a blast hawking my wares as well, including a ["shitpost game"](https://brendanalbano.itch.io/can-we-keep-it){:target="_blank"} I made at a Big Bad Con workshop and printed on the hotel printer. All the other folks selling games were so enthusiastic and supportive, and trading zines with everyone was a con highlight.
+Thanks to the [Big Bad Con](https://www.bigbadcon.com/) Small Press Showcase, Kate and I got a chance to table and sell our zines for the first time! Kate's project [FOLK](https://brendanalbano.itch.io/folk) was our flagship product (if you're in Portland, you can probably snag a print copy at Board Bard Games, Dark Future, or Secret Room), but I had a blast hawking my wares as well, including a ["shitpost game"](https://brendanalbano.itch.io/can-we-keep-it) I made at a Big Bad Con workshop and printed on the hotel printer. All the other folks selling games were so enthusiastic and supportive, and trading zines with everyone was a con highlight.
 
 ## A Year of Play
 
@@ -44,9 +44,9 @@ Not necessarily things that came out in 2024, just some things I loved in 2024! 
 - Coyote Doggirl by Lisa Hanawalt
 - Adventure Hooks by Tyler Crumrine
 - Jeremiah Brent on Queer Eye Season 9
-- [RTFM Podcast](https://podcasts.apple.com/us/podcast/rtfm/id1555180427){:target="_blank"}
-- [Malpractice](https://www.instagram.com/malpractice.pdx/){:target="_blank"}
-- [TPK Brewing](https://www.tpkbrewing.com/){:target="_blank"}
+- [RTFM Podcast](https://podcasts.apple.com/us/podcast/rtfm/id1555180427)
+- [Malpractice](https://www.instagram.com/malpractice.pdx/)
+- [TPK Brewing](https://www.tpkbrewing.com/)
 - The glass cups that cortados come in
 - Sauna and Spa at Everett House
 - The Mt. Tabor Red Loop
