--- a/posts/2025-12-14-the-endies-2025.markdown
+++ b/posts/2025-12-14-the-endies-2025.markdown
@@ -52,7 +52,7 @@ Go check out [Lady Tabletop's blog](https://ladytabletop.wordpress.com/2025/11/3
 
 **Inspired the biggest thoughts about my life:** [OVER/UNDER](https://samsorensen.blot.im/mothership-month-2025-wargame-over/under)
 
-If you're at all on RPG social media, I'm sure you heard about this. If not, it was a month-long, real-time megagame run on Discord by Sam Sorensen as part of Mothership Month. It was intended to be mostly a wargame/political megagame, and quickly transformed into a freewheeling larp. It was very weird and very cool and a very big time commitment to engage with fully. I only lightly participated, but the tension between how much I wanted to participate and how much I decided to participate [inspired this post about "shoulds" and "wants"]({% post_url 2025-11-10-should-and-want %}). I want to stop holding myself back from the things I want! OVER/UNDER put this into sharp focus for me, and for that, it gets an Endie!
+If you're at all on RPG social media, I'm sure you heard about this. If not, it was a month-long, real-time megagame run on Discord by Sam Sorensen as part of Mothership Month. It was intended to be mostly a wargame/political megagame, and quickly transformed into a freewheeling larp. It was very weird and very cool and a very big time commitment to engage with fully. I only lightly participated, but the tension between how much I wanted to participate and how much I decided to participate [inspired this post about "shoulds" and "wants"](2025-11-10-should-and-want.html). I want to stop holding myself back from the things I want! OVER/UNDER put this into sharp focus for me, and for that, it gets an Endie!
 
 **Most resonant character:** [Triangle Agency](https://shop.hauntedtable.games/collections/games/products/triangle-agency-core-rulebook-preorder)
 
